include $(top_srcdir)/config/MakeGlobal.am

#SUBDIRS = xc

bin_PROGRAMS = testsystolic testsystolic2

#moldft_SOURCES = moldft.cc lda.cc  molecule.cc \
#                 \
#                molecule.h molecularbasis.h

#moldft_LDADD = xc/libMADxc.a $(MRALIBS)

testsystolic_SOURCES = testsystolic.cc
testsystolic_LDADD = $(MRALIBS)

testsystolic2_SOURCES = testsystolic2.cc
testsystolic2_LDADD = $(MRALIBS)
