include $(top_srcdir)/config/MakeGlobal.am

#SUBDIRS = xc


bin_PROGRAMS = testsystolic testsystolic2 localize_boys tensor_training

#moldft_SOURCES = moldft.cc lda.cc  molecule.cc \
#                 \
#                molecule.h molecularbasis.h

#moldft_LDADD = xc/libMADxc.a $(MRALIBS)

testsystolic_SOURCES =  testsystolic.cc
testsystolic_LDADD = $(MRALIBS)

testsystolic2_SOURCES =  testsystolic2.cc
testsystolic2_LDADD = $(MRALIBS)

localize_boys_SOURCES = localize_boys.cc
localize_boys_LDADD = $(MRALIBS)

tensor_training_SOURCES = tensor_training.cc
tensor_training_LDADD = $(MRALIBS)
